--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,61 +6,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.HomeFragment">
 
-<!--    <Button-->
-<!--        android:id="@+id/select_image"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textAllCaps="false"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        android:text="Select Image"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/edt_image_name"/>-->
-<!--    <EditText-->
-<!--        android:id="@+id/edt_image_name"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:hint="Enter name"-->
-<!--        android:layout_margin="20dp"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        android:layout_height="wrap_content"/>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-<!--    <Button-->
-<!--        android:id="@+id/btn_upload"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textAllCaps="false"-->
-<!--        android:text="Upload"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/select_image"-->
-<!--        app:layout_constraintRight_toLeftOf="@id/select_image"/>-->
+    <TextView
+        android:id="@+id/txtNoItemDataLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Item Data"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-<!--    <Button-->
-<!--        android:id="@+id/btn_show_upload"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:text="Show Upload"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/select_image"-->
-<!--        app:layout_constraintLeft_toRightOf="@id/select_image"-->
-<!--        app:layout_constraintTop_toTopOf="@id/select_image"-->
-<!--        />-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/cv"-->
-<!--        android:layout_width="100dp"-->
-<!--        android:layout_height="100dp"-->
-<!--        android:elevation="100dp"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        android:layout_margin="20dp"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/select_image"-->
-<!--        >-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/image_view"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:scaleType="centerCrop"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:background="@drawable/ic_launcher_background"/>-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_margin="30dp"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
